# QuanGuru

./: .gitignore  .gitlab-ci.yml  .pylintrc  CNAME  LICENSE  MANIFEST.in  Makefile  NewObjectDemo.ipynb  QuantumToolbox.html  README.md  classes.html  genindex.html  index.html  make.bat  objects.inv  py-modindex.html  requirements-dev.txt  requirements-optional.txt  requirements.txt  search.html  searchindex.js  setup.cfg
.github/: issue-branch.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yaml  ENHANCEMENT_REQUEST.yaml  FEATURE_REQUEST.yaml
.github/workflows/: development.yml  issue-autolabel.yml  main.yml  python-package.yml
.ipynb_checkpoints/: NewObjectDemo-checkpoint.ipynb
Demos/: 20200220.ipynb  A.ipynb  DQRS.ipynb  DemoTry.py  FinalNotebook.ipynb  NewObjectDemo.ipynb  QubitDriving_Test.ipynb  demoOne.ipynb  eigVecDist.ipynb  multiQubit.ipynb  phaseTransition.ipynb  singleQubit.ipynb  structureDemo.ipynb  testProtocol.ipynb  try2.ipynb  tryhere.ipynb
Demos/classDemos/: QUni.ipynb
HeisenbergModel/: DSHM.py
HeisenbergModel/Modules/: Evolutions_Unitary.py  Hamiltonians.py
Plotting/: Functions.py  SimplePlots.py  plottingSettings.py
Plotting/colormaps/: GnYlPu.txt  PuYl.txt  PuYlGn.txt  YlPu.txt
QuanGuru/: __init__.py  classes_classes.dot
QuanGuru/QuantumToolbox/: IPR.py  (+7 more)
QuantumToolbox/: Hamiltonians.html  Hamiltonians.py  IPR.html  TimeEvolution.py  _helpers.html  basicGates.html  eigenVecVal.html  evolution.html  functions.html  functions.py  linearAlgebra.html  liouvillian.py  operators.html  operators.py  quasiProbabilities.html  quasiProbabilities.py  rmtDistributions.html  spinRotations.html  states.html  states.py  thermodynamics.html
SaveRead/: saveH5.py
_modules/: index.html
_sources/: QuantumToolbox.rst  classes.rst  index.rst
_static/: documentation_options.js  gallery.css
classes/: QDrive.html  QGates.html  QPro.html  QRes.html  QSim.html  QSim.py  QSimBase.html  QSimComp.html  QSweep.html  QSys.html  QSys.py  QSystem.html  QTerm.html  QUni.py  __init__.py  base.html  baseClasses.html  couplings.html  environment.html  exceptions.html  extensions.html  extensions.py  modularSweep.html  parameterObj.py
dataAnalysis/: tryhere.ipynb
docs/: Makefile
qTools/: __init__.py  packages_classes.dot  setup.py  simUnits.py
source/: conf.py  index.rst  modules.rst  qTools.QuantumToolbox.Demos.rst  qTools.QuantumToolbox.rst  qTools.classes.extensions.rst  qTools.classes.rst  qTools.extensions.rst  qTools.rst
tests/: Liouvillian.ipynb  Liouvillian2.ipynb  Liouvillian3.ipynb  conftest.py  constants.py  qubit_Thermal.ipynb  test_Liouvillian.py  test_LiouvillianDecayDephasing.py  test_LiouvillianDecayOnly.py  test_LiouvillianPureDephasing.py  test_dissipator.py  test_evolution.py  test_functions.py  test_helpersQuantumToolbox.py  test_linearAlgebra.py  test_operators.py  test_posSO.py  test_preSO.py  test_preposSO.py  test_states.py  test_willPass.py
tryHere/: tryHere.py
(+977 files in other folders)
