[metadata]
name = QuanGuru
version = 0.0.1rcN
author = CirQuS Team: Cahit Kargi, Fabio Henriques, Angsar Manatuly, Adrien Di Lonardo, Giorge Gemisis, Juan Pablo Dehollain, and Nathan K. Langford
author_email = 
description = QuanGuru (pronounced Kangaroo) is a Python library for Quantum Sciences.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = quantum, physics, simulation
license = BSD 3-Clause License
license_file = LICENSE.txt
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Operating System :: OS Independent

[options]
package_dir =
    = QuanGuru
packages = find:
python_requires = >=3.5

[options.packages.find]
where = QuanGuru

[flake8]
exclude = *.dot, __init__.py
max-line-length = 140
ignore = E261,E226,E262,E302,E265,E302,E301,E303,E305,E228,E305

[mypy]
files = QuanGuru

[mypy-*.classes.*]
ignore_errors = True

[mypy-*.extensions.*]
ignore_errors = True

[coverage:run]
omit =
    */classes/*
    */extensions/*
    */setup.py
    */simUnits.py
    */__init__.py

[tool:pytest]
markers =
