[metadata]
name = QuanGuru
version = 0.0.1rc17
author = CirQuS Team: Cahit Kargi, Fabio Henriques, Angsar Manatuly, Adrien Di Lonardo, Giorge Gemisis, Juan Pablo Dehollain, and Nathan K. Langford
author_email = ckargi88@gmail.com
description = QuanGuru (pronounced Kangaroo) is a Python library for Quantum Sciences.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = quantum, physics, simulation
license = BSD 3-Clause License
license_files = LICENSE
url = https://github.com/CirQuS-UTS/QuanGuru
project_urls = 
    Documentation: https://cirqus-uts.github.io/QuanGuru/,
    Source Code: https://github.com/CirQuS-UTS/QuanGuru
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5
install_requires = 
    numpy
    scipy
include_package_data = True

[options.packages.find]
where = src

[flake8]
exclude = *.dot, __init__.py
max-line-length = 140
ignore = E261,E226,E262,E302,E265,E302,E301,E303,E305,E228,E305

[mypy]
files = quanguru

[mypy-*.classes.*]
ignore_errors = True

[mypy-*.extensions.*]
ignore_errors = True

[coverage:run]
omit =
    */classes/*
    */extensions/*
    */setup.py
    */simUnits.py
    */__init__.py

[tool:pytest]
markers =
